# mariana-trench

./: .gitignore  01a85c17.0e18d97c.js  01a85c17.9f0869c1.js  01a85c17.a8f285be.js  01a85c17.ccc0ca99.js  01a85c17.e3859a8c.js  01a85c17.f11dc932.js  031793e1.1ce98c70.js  031793e1.7d519dd0.js  031793e1.8fe0f585.js  031793e1.aa9e1e45.js  143ae67f.b170f2dd.js  17896441.28a19a9b.js  17896441.594bf025.js  17896441.7410b4d5.js  17896441.9eadf7c7.js  17896441.ec6bd957.js  17896441.f69af79b.js  17896441.fd6fbee5.js  1be78505.122756e6.js  1be78505.33ff38f6.js  1be78505.491426a5.js  1be78505.93c2b642.js  1be78505.9b77504e.js  1be78505.b10807cb.js  1be78505.dc1be528.js  2.38aa3b5f.js  2.527ae02c.js  2.a207cc27.js  2.a31c6b1d.js  2.b3ce0de2.js  20.01848fbe.js  20.0aed0de4.js  24.3a9d0246.js  24.5c0594a0.js  25.b8db153a.js  26.587ae094.js  30a24c52.929dbe8a.js  30a24c52.aed7fe1c.js  30a24c52.d81a9fe2.js  (+256 more)
.github/ISSUE_TEMPLATE/: bug.md  feature-request.md
.github/workflows/: main.yml  publish_pypi.yml  test.yml  tests.yml  website.yml
.llms/rules/: devmate.md
_src/: build_from_source.md  configuration.md  contribution.md  customize_sources_and_sinks.md  debugging_fp_fns.md  exploitability_rules.md  feature_descriptions.md  getting_started.md  known_false_negatives.md  models.md  multi_source_sink_rules.md  overview.md  rules.md  shims.md
assets/css/: styles.221c7991.css  styles.78169cda.css  styles.7cae6dac.css  styles.8ec4a44b.css  styles.9daa3b95.css  styles.a9e008ac.css  styles.ad433816.css  styles.b5629cc8.css  styles.d23db1ba.css  styles.e56ff910.css  styles.f88b092d.css
assets/js/: 01a85c17.293063cc.js  01a85c17.29c39eaa.js  01a85c17.853457b0.js  01a85c17.d54d67fe.js  01a85c17.e74cb76f.js  01a85c17.f272875f.js  01a85c17.f3125630.js  031793e1.0c2d8965.js  031793e1.20dafcc0.js  031793e1.d46437ba.js  068c57da.13450460.js  068c57da.1a132088.js  068c57da.4a2b2796.js  068c57da.52f05726.js  068c57da.68ad2a6b.js  068c57da.8e92838a.js  068c57da.93a2eb07.js  068c57da.c1962b83.js  068c57da.c46a17b7.js  068c57da.cda74fac.js  068c57da.da22d006.js  08379d6f.24180917.js  08379d6f.2a92319a.js  08af526d.4b834b58.js  096bfee4.b466390d.js  096bfee4.e16cdc43.js  0df38cfe.42b324ab.js  0df38cfe.5dff17a8.js  0df38cfe.77f66c55.js  0df38cfe.e8e39d35.js  11b43341.91d1ed64.js  1203.5a50c785.js  123f1cf0.29440388.js  123f1cf0.3d1c1d03.js  123f1cf0.57451e1b.js  123f1cf0.8c08c261.js  123f1cf0.9e21492c.js  123f1cf0.b2615034.js  1287daf0.24133656.js  1287daf0.52a98bf5.js  (+442 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/tags/: index.html
blog/welcome/: index.html
cmake/: FindAndroidSDK.cmake  FindJsonCpp.cmake  FindRedex.cmake
configuration/: README.md  default_generator_config.json  default_system_jar_paths.json  generator_config.json  lifecycles.json  rules.json  shims.json
configuration/filters/: 3-intent-redirect-filter.json  exported-component-filter.json
desugar/resources/: log4j2.properties
docs/android-lifecycles/: index.html
docs/build-from-source/: index.html
docs/configuration/: index.html
docs/contribution/: index.html
docs/customize-sources-and-sinks/: index.html
docs/customize_sources_and_sinks/: index.html
docs/debugging-fp-fns/: index.html
docs/developers-guide/: index.html
docs/exploitability-rules/: index.html
docs/feature-descriptions/: index.html
docs/getting-started/: index.html
docs/introduction/: index.html
docs/known-false-negatives/: index.html
docs/models/: index.html
docs/multi-source-sink-rules/: index.html
docs/overview/: index.html
docs/rules/: index.html
docs/running-on-3rd-party-apps/: index.html
docs/shims/: index.html
documentation/sample-app/: build.gradle  gradlew  sample-app-debug.apk  settings.gradle
documentation/website/: .eslintrc.js  docusaurus.config.js  oss-stubs.sh  package.json  sidebars.js
scripts/: buck_build_jars.py  build_static_binary.py  cmake_shim.py  compare_models.py  convert_jar_for_analysis.sh  explore_models.py  schedule_sandcastle_run.py  setup.py  system_jar_paths.py  update_expected_integration_test_outputs.sh  validate_json_model_generators.py
shim/: configuration.py  constant.py  exit_codes.py  package.py  resources.py  shim.py
shim/resources/: default_generator_config.json  default_system_jar_paths.json  minimal_system_jar_paths.json  model_generator_schema.json  oculus_system_jar_paths.json  rules.json  td_rules.json
source/: AbstractTaintTree.cpp  AbstractTaintTree.h  AbstractTreeDomain.h  Access.cpp  Access.h  AccessPathFactory.cpp  AccessPathFactory.h  AccessPathTreeDomain.h  AliasAnalysisResults.cpp  AliasAnalysisResults.h  AliasingProperties.cpp  AliasingProperties.h  AnalysisEnvironment.cpp  AnalysisEnvironment.h  AnalysisMode.cpp  AnalysisMode.h  AnalysisPass.cpp  AnalysisPass.h  AnnotationFeature.cpp  AnnotationFeature.h  AnnotationFeatureSet.cpp  AnnotationFeatureSet.h  ArtificialMethods.cpp  ArtificialMethods.h  Assert.h  BackwardTaintEnvironment.cpp  BackwardTaintEnvironment.h  BackwardTaintFixpoint.cpp  BackwardTaintFixpoint.h  BackwardTaintTransfer.cpp  BackwardTaintTransfer.h  CachedModelsContext.cpp  CachedModelsContext.h  CallClassIntervalContext.cpp  CallClassIntervalContext.h  CallEffects.cpp  CallEffects.h  CallGraph.cpp  CallGraph.h  CallInfo.cpp  (+311 more)
source/constraints/: FieldConstraints.cpp  FieldConstraints.h  IntegerConstraint.cpp  MethodConstraints.cpp  MethodConstraints.h  ParameterConstraints.cpp  ParameterConstraints.h  TypeConstraints.cpp  TypeConstraints.h
source/local_flow/: LocalFlowAnalysis.cpp  LocalFlowAnalysis.h  LocalFlowClassAnalyzer.cpp  LocalFlowClassAnalyzer.h  LocalFlowConstraint.cpp  LocalFlowConstraint.h  LocalFlowLabel.cpp  LocalFlowLabel.h  LocalFlowLambdaDetection.cpp  LocalFlowLambdaDetection.h  LocalFlowMethodAnalyzer.cpp  LocalFlowMethodAnalyzer.h  LocalFlowNode.cpp  LocalFlowNode.h  LocalFlowRegistry.cpp  LocalFlowRegistry.h  LocalFlowResult.cpp  LocalFlowResult.h  LocalFlowTempElimination.cpp  LocalFlowTempElimination.h  LocalFlowTransfer.cpp  LocalFlowTransfer.h  (+2 more)
website/: docusaurus.config.js  sidebars.js
(+1237 files in other folders)
